# ascii-earth

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  README.ru.md  globe.py  pyproject.toml
ascii_earth/: __init__.py  globe.py
ascii_earth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
